# ALSAI

./: .gitignore  .~lock.test_results.ods#  README.md  commends.txt  frames_2025-08-27_00.06.30.gv  jetbot_tests.txt  nav2_params.yaml  test_results.ods  test_results.txt  tflite_tests.ods  tflite_tests.txt
AI/: XYAngle.py  build_model.py  check_nr_data.py  convert_lite_best.sh  convert_to_tflite.py  create_data.sh  create_data_OnRosbag.py  create_data_rosbag.py  create_test_train_data.py  gen_trajectory.py  graphical_all.sh  graphical_model.py  paths2lines.py  sum_models.sh  summary.py  svg2sdf.py  test_all.sh  test_lite_all.sh  test_model.py  test_net_by_rosbags.py  test_network.py  test_real_data.sh  test_results.ods  train_all.sh  train_model.py  train_net_by_rosbags.py  train_network.py  utilities.py
AI/nets/: model1
gazebo_backup/inz_rob_2_0/: model.config  model.sdf
maps/: map_maze1.yaml  map_maze2.pgm  map_maze2.yaml  map_maze3.yaml  maze1.pgm  maze2.pgm  maze3.pgm
ros_workspace/src/robot_control/: CMakeLists.txt  package.xml
ros_workspace/src/robot_control/config/: controller_params.yaml  slam_params.yaml
ros_workspace/src/robot_control/launch/: display.launch.py  nav.launch.py  slam.launch.py
ros_workspace/src/robot_control/src/: listener_node.cpp  manual_node.cpp  pose_bridge.cpp  tf2_plugin.cpp
ros_workspace/src/robot_control/urdf/: mobile_base.urdf.xacro  robot.rviz
rosbags/map3_run1/: metadata.yaml
rosbags/map3_run2/: metadata.yaml
saved_map/: maze2.pgm  maze2.yaml
worlds/: maze1_world  maze2_world  maze3_world  maze4_world  maze5_world  maze6_world  maze7_world
worlds/maze1/: model.sdf
worlds/maze2/: maze2.world  model.sdf
worlds/maze3/: maze3.world  model.sdf
worlds/maze4/: model.config  model.sdf
worlds/maze4_lines/: model.config  model.sdf
worlds/maze5/: model.config  model.sdf
worlds/maze5_lines/: model.config  model.sdf
worlds/maze6/: model.config  model.sdf
worlds/maze6_lines/: model.config  model.sdf
worlds/maze7/: model.config  model.sdf
worlds/maze7_lines/: model.config  model.sdf
worlds/test_maze1/: model.config  model.sdf
